<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Контроль 24</string>

    <!--Errors-->
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="http_400">Код ошибки: 400. Неверное имя пользователя или пароль</string>
    <string name="api_call_error">Не удалось подключиться к серверу. Проверьте ваше интернет-соединение</string>

    <!--Auth Screen-->
    <string name="company_description">Cистемы мониторинга и диспетчеризации транспорта ГЛОНАСС/GPS</string>
    <string name="login_hint">Логин</string>
    <string name="login_hint_error">Логин*</string>
    <string name="password_hint">Пароль</string>
    <string name="password_hint_error">Пароль*</string>
    <string name="login">Войти</string>
    <string name="help">Помощь</string>
    <string name="input_error">Не может быть пустым</string>


    <string name="reports_menu">Отчеты</string>
    <string name="list_menu">Список</string>
    <string name="map_menu">Карта</string>

    <!--Objects List part-->
    <string name="objects_list">Объекты отслеживания</string>
    <string name="car_image">Car icon</string>
    <string name="dashboard_image">Dashboard icon</string>
    <string name="location_image">Location icon</string>
    <string name="time_image">Time icon</string>
    <string name="down_arrow_image">Down arrow icon</string>
    <string name="upper_arrow_image">Upper arrow icon</string>
    <string name="car_name_template">Нет данных</string>
    <string name="display_on_map">Отобразить на карте</string>
    <string name="location_template">Нет данных</string>
    <string name="time_template">Нет данных</string>
    <string name="owner_template">Нет данных</string>
    <string name="type_template">Нет данных</string>
    <string name="category">Тип ТС</string>
    <string name="category_template">Нет данных</string>
    <string name="auto_num">Гос номер</string>
    <string name="auto_num_template">Нет данных</string>
    <string name="driver_template">Указать</string>
    <string name="make_call">Позвонить</string>

    <!--Objects List View Settings-->
    <string name="left_arrow_image">Left arrow icon</string>
    <string name="objects_list_settings_title">Вид списка</string>
    <string name="objects_short">Кратко</string>
    <string name="objects_detailed">Подробно</string>

    <!--Help Activity-->
    <string name="login_problem">Проблемы с авторизацией?</string>
    <string name="email_text">Электронная почта службы поддержки:</string>
    <string name="email_link"><u>support@control24.pro</u></string>
    <string name="support_number_text">Номер телефона единой службы поддержки:</string>
    <string name="support_number_link"><u>+7(391) 271–71–17</u></string>
    <string name="youtube_guide_text">Гайд по использованию приложения:</string>
    <string name="youtube_guide_link"><u>https://www.youtube.com/watch?v=jfKfPfyJRdk</u></string>
    <string name="logo_big">Logo big icon</string>

    <!--About App Activity-->
    <string name="about_app_title">О приложении</string>
    <string name="app_version">Версия приложения: %s от %s</string>
    <string name="app_purpose">Приложение предназначено для повышения эффективности контроля, визуализации состояний и перемещений объектов отслеживания.</string>
    <string name="developer_info">Данные компании разработчика:</string>
    <string name="dev_email_text">Электронная почта (E-mail): </string>
    <string name="dev_email_link"><u>info@control24.pro</u></string>
    <string name="dev_office_text">Офис:</string>
    <string name="dev_office_link"><u>+7(391) 271–17–71</u></string>
    <string name="dev_website_text">Сайт:</string>
    <string name="dev_website_link"><u>https://контроль24.рф</u></string>
    <string name="yandex_conditions">Условия использования Яндекс.Карт:</string>
    <string name="yandex_conditions_link"><u>https://yandex.ru/legal/maps_termsofuse</u></string>

    <!--Map part-->
    <string name="traffic_image">Traffic icon</string>
    <string name="minus_image">Minus icon</string>
    <string name="plus_image">Plus icon</string>

    <!--Settings part-->
    <string name="settings_menu">Настройки</string>
    <string name="account">Аккаунт</string>
    <string name="username_template">Имя пользователя</string>
    <string name="logout">Выйти</string>
    <string name="account_image">Account icon</string>
    <string name="logout_image">Logout icon</string>
    <string name="general_settings">Основные настройки</string>
    <string name="dark_theme">Настроить ночную тему</string>
    <string name="theme_image">Moon icon</string>
    <string name="theme_state">Состояние</string>
    <string name="map_settings">Настройки карт</string>
    <string name="map_provider_image">Map location icon</string>
    <string name="map_using">Постовщик</string>
    <string name="list_view_settings">Вид списка объектов</string>
    <string name="list_view_image">List view icon</string>
    <string name="list_view">Вид</string>
    <string name="right_arrow_image">Right arrow icon</string>
    <string name="support_settings">Поддержка</string>
    <string name="about_app">О приложении</string>
    <string name="about_app_image">About app icon</string>
    <string name="help_image">Help icon</string>

    <!--Internet dialog view-->
    <string name="internet_dialog_warning">Ошибка</string>
    <string name="internet_dialog_description">Отсутствует интернет соединение. Проверьте подключение и повторите попытку</string>
    <string name="dialog_retry">Повторить</string>
    <string name="dialog_continue">Продолжить</string>

    <!--App Theme Activity-->
    <string name="theme">Настроить ночную тему</string>
    <string name="disabled">Выключена</string>
    <string name="enabled">Включена</string>
    <string name="scheduled">По расписанию: %s</string>
    <string name="scheduled_time">По расписанию</string>
    <string name="scheduled_default">%s</string>
    <string name="system_default">Как в системе</string>

    <!--Edit Dialog-->
    <string name="add_driver">Добавить водителя</string>
    <string name="driver_name_hint">Водитель</string>
    <string name="driver_number_hint">Контактный номер</string>
    <string name="driver_cancel">Отменить</string>
    <string name="driver_save">Сохранить</string>

    <!--Map Settings-->
    <string name="yandex_maps">Яндекс Карты</string>
    <string name="yandex_image">Yadex icon</string>
    <string name="open_street_maps">Open Street Maps</string>
    <string name="open_street_maps_image">Open Street Maps icon</string>
    <string name="map_type">Тип карты</string>
    <string name="map_scheme">Схема</string>
    <string name="map_satellite">Спутник</string>
    <string name="map_hybrid">Гибрид</string>
    <string name="map_controls">Элементы управления</string>
    <string name="map_provider">Поставщик карт</string>
    <string name="zoom_controls">Кнопки масштаба</string>
    <string name="traffic">Пробки</string>
    <string name="map_layers_image">Layers icon</string>

    <!--Route Activity-->
    <string name="period_info_button">Информация за период</string>
    <string name="period">За период</string>
    <string name="days">Суточно</string>
    <string name="date">Дата</string>
    <string name="day_of_week">День недели</string>
    <string name="pick_range">Выберите диапазон</string>
    <string name="range">....</string>
    <string name="range_template">%s - %s</string>
    <string name="no_period_data">Нет данных за данный период</string>
    <string name="counter">0</string>
    <string name="route_start">Начало:</string>
    <string name="average_speed">Средняя скорость:</string>
    <string name="overall_time">Время в пути:</string>
    <string name="mileage">Расстояние:</string>
    <string name="mileage_template">%sкм</string>
    <string name="route_end">Конец:</string>

    <!--HomeScreen-->
    <string name="objects">Список</string>
    <string name="map">Карта</string>
    <string name="settings">Настройки</string>

    <!--Descriptions-->
    <string name="back">Назад</string>
    <string name="company_logo">Логотип Контроль 24</string>

    <!--Dialogs-->
    <string name="error_title">Упс!</string>
    <string name="error_confirm">Ок</string>
    <string name="error_text">Произошла ошибка:</string>

    <!--Car categories-->
    <string name="house">Дом</string>
    <string name="car">Машина</string>
    <string name="cargo">Грузовой</string>
    <string name="special">Особый</string>
    <string name="vip">VIP</string>
    <string name="passenger">Легковой</string>
    <string name="mixer">Миксер</string>
    <string name="front_loader">Фронтальный погрузчик</string>
    <string name="van">Фургон</string>
    <string name="truck_crane">Автокран</string>
    <string name="ekg">ЭКГ</string>
    <string name="belaz">БелАЗ</string>
    <string name="excavator">Экскаватор</string>
    <string name="loader">Погрузчик</string>
    <string name="tractor">Трактор</string>
    <string name="tractor_excavator">Трактор-экскаватор</string>
    <string name="fuel_tanker">Бензовоз</string>
    <string name="tractor2">Трактор 2</string>
    <string name="tractor_excavator2">Трактор-экскаватор 2</string>
    <string name="bus">Автобус</string>
    <string name="bulldozer">Бульдозер</string>

    <!--Objects Screen-->
    <string name="tracking_objects_title">Объекты отслеживания</string>
    <string name="empty_tracking_objects">Нет объектов</string>
    <string name="speed">%dкм/ч</string>
    <string name="no_information">Нет информации</string>
    <string name="owner">Владелец</string>
    <string name="car_model">Модель</string>
    <string name="type">Тип ТС</string>
    <string name="licence_plate">Гос номер</string>
    <string name="driver">Водитель</string>
    <string name="info_per_day">Информация за сутки</string>
    <string name="info_per_period">Информация за период</string>
    <string name="geocoding_error">Ошибка геокодирования</string>
    <string name="unspecified">Не указан</string>




    <string name="ok">Ок</string>

    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoic21pdHRtaXN0ZXIiLCJhIjoiY2x3NTBheW0xMThmdzJobXUyZDBtNDUxaCJ9.y9dxnz_qhw_tZUSwRLSk8Q</string>

</resources>