<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/appBackground"
    tools:context=".activities.AboutAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutAppBackCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/bgLogoLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgLogoLL">

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_arrow_image"
            android:foreground="@drawable/oval_ripple_effect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_left_arrow"
            app:tint="?attr/textOnBackgroundColor" />

        <TextView
            android:id="@+id/aboutAppBackTV"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/about_app_title"
            android:textColor="?attr/textOnBackgroundColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/leftArrow"
            app:layout_constraintStart_toEndOf="@+id/leftArrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bgLogoLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_view_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/companyLogoIV"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/company_logo_image"
            android:src="@drawable/company_logo_small" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgLogoLL">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appVersionTV"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/app_version"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/appPurposeTV"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/app_purpose"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appVersionTV"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/yandexConditionsTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/yandex_conditions"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appPurposeTV"/>

            <TextView
                android:id="@+id/yandexConditionsLinkTV"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_height="wrap_content"
                android:text="@string/yandex_conditions_link"
                android:textColor="?attr/textLinkColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yandexConditionsTV" />

            <TextView
                android:id="@+id/devInfoTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/developer_info"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yandexConditionsLinkTV"/>

            <TextView
                android:id="@+id/devEmailTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dev_email_text"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/devInfoTV"/>

            <TextView
                android:id="@+id/devEmailLinkTV"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dev_email_link"
                android:textColor="?attr/textLinkColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/devEmailTV" />

            <TextView
                android:id="@+id/devOfficeTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/dev_office_text"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/devEmailLinkTV" />

            <TextView
                android:id="@+id/devOfficeLinkTV"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dev_office_link"
                android:textColor="?attr/textLinkColor"
                app:layout_constraintBottom_toBottomOf="@+id/devOfficeTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/devOfficeTV"
                app:layout_constraintTop_toTopOf="@+id/devOfficeTV" />

            <TextView
                android:id="@+id/devWebsiteTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/dev_website_text"
                android:textColor="?attr/textOnBackgroundColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/devOfficeLinkTV"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/devWebsiteLinkTV"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dev_website_link"
                android:textColor="?attr/textLinkColor"
                app:layout_constraintBottom_toBottomOf="@+id/devWebsiteTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/devWebsiteTV"
                app:layout_constraintTop_toTopOf="@+id/devWebsiteTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>