<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackground"
    android:fitsSystemWindows="true"
    tools:context=".activities.MapProviderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mapProviderBackCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bgLogoLL"
        app:layout_constraintBottom_toBottomOf="@id/bgLogoLL">

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_arrow_image"
            android:foreground="@drawable/oval_ripple_effect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_left_arrow"
            app:tint="?attr/textOnBackgroundColor" />

        <TextView
            android:id="@+id/mapSettingsTV"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/map_settings"
            android:textColor="?attr/textOnBackgroundColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/leftArrow"
            app:layout_constraintStart_toEndOf="@+id/leftArrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bgLogoLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_view_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/companyLogoIV"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/company_logo_image"
            android:src="@drawable/company_logo_small" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/bgLogoLL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mapProviderTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textOnBackgroundColor"
                android:text="@string/map_provider"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/mapProviderTG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:layout_constraintTop_toBottomOf="@+id/mapProviderTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/yandexMapsMToggle"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yandex_maps"/>

                <Button
                    android:id="@+id/osmMapsMToggle"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_street_maps"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mapTypeCL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapProviderTG"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/mapTypeTV"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textOnBackgroundColor"
                    android:text="@string/map_type"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/layersTG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mapTypeTV">

                    <Button
                        android:id="@+id/schemeMButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_scheme" />

                    <Button
                        android:id="@+id/satelliteMButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_satellite" />

                    <Button
                        android:id="@+id/hybridMButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_hybrid" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/miscellaneousTV"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="?attr/textOnBackgroundColor"
                android:text="@string/map_controls"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapTypeCL"/>

            <CheckBox
                android:id="@+id/zoomButtonsMCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/zoom_controls"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/miscellaneousTV"
                tools:ignore="VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/trafficControlsMCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/traffic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zoomButtonsMCheckBox"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>