<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="18dp"
    android:paddingHorizontal="18dp"
    android:paddingBottom="8dp"
    android:background="@drawable/dialog_background">


    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/internet_dialog_warning"
        android:textColor="@color/material_theme_sys_light_on_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/internet_dialog_description"
        android:textColor="@color/material_theme_sys_light_on_background"
        android:textSize="16sp"
        android:visibility="visible"
        android:layout_below="@id/titleName"/>

    <RelativeLayout
        android:id="@+id/retryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/background_logout_btn"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:layout_below="@id/descriptionTV"
        android:layout_toStartOf="@id/continueBtn">

        <TextView
            android:id="@+id/retryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/dialog_retry"
            android:textAllCaps="true"
            android:textColor="@color/material_theme_sys_light_on_background"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_logout_btn"
        android:layout_marginEnd="-10dp"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/descriptionTV">

        <TextView
            android:id="@+id/continueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/dialog_continue"
            android:textAllCaps="true"
            android:textColor="@color/material_theme_sys_light_on_background"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>